# CVz

./: .gitignore  README.md  pyproject.toml
CVz/: CVz.py  __init__.py
